# serverless-instance-scheduler

./: .env.example  .gitignore  .secrets.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  start.hurl  stop.hurl
.github/workflows/: .worker-ecr-push.yaml  .worker-lambda-deploy.yaml  cd.yaml  ci.yaml  deploy.yaml  push-image.yaml
app/: __init__.py  instances.py  models.py
app/repositories/instance/: __init__.py  operation_interface.py  repository_interface.py
app/repositories/instance/implementations/aws/: __init__.py  settings.py
app/repositories/instance/implementations/aws/operations/: __init__.py  get_office_hours_tagged_instances.py  (+2 more)
app/services/ec2_instance_state_manager/: __init__.py  interface.py
app/services/ec2_instance_state_manager/helper/: __init__.py  interface.py
app/services/ec2_instance_state_manager/helper/commands/: __init__.py  get_instances_by_filters.py  interface.py  start_instances.py  stop_instances.py
app/services/ec2_instance_state_manager/strategies/: __init__.py  factory.py  interface.py  start_instances_by_filters.py  stop_instances_by_filters.py
app/services/office_hour_instances_state_manager/: __init__.py  interface.py
app/services/office_hour_instances_state_manager/states/: __init__.py  factory.py  interface.py  start.py  stop.py
app/utilities/aws_client/: __init__.py  interface.py  settings.py
app/utilities/aws_client/operations/: __init__.py  get_ec2_instances.py  interface.py  start_ec2_instances.py  stop_ec2_instances.py
app/utilities/logger/: __init__.py  logging.conf.json
