[project]
name = "serverless-instance-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.19",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
]

[tool.setuptools]
packages = ["app"]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[project.scripts]
lambda = "app:handler"
