[project]
name = "serverless-instance-scheduler"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=4.0.0",
    "aws-lambda-powertools[parser,tracer]>=3.24.0",
    "boto3>=1.42.24",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "python-dotenv>=1.2.1",
    "types-boto3[ec2]>=1.42.32",
]

[tool.setuptools]
packages = ["app"]

[tool.uv]
package = true

[tool.ruff]
line-length = 120

[project.scripts]
lambda = "app:handler"
